# Python-tasks-solving-practice

./: .gitignore  README.md  pyproject.toml
algorithms/: 121_best_time_to_buy_and_sell.py  122_best_time_to_buy_stock.py  125_valid_palindrome.py  13_romain_to_integer.py  14_longest_prefix.py  168_excel_sheet_column_title.py  169_majority_element.py  189_rotate_array.py  1_two_sum.py  215_kth_largest_element_in_array.py  26_remove_dupl_from_sorted_arr.py  274_h_index.py  27_remove_element.py  290_word_pattern.py  35_search_index_position.py  383_ransom_note.py  392_is_subsequence.py  459_repeating_substring_pattern.py  45_jump_game_2.py  49_group_anagrams.py  55_jump_game.py  6_zigzag_conversion.py  80-remove_duplicates.py  9_palindrome_number.py  compare_string.py  fake_log.py  find_country.py  flat_list.py  ice.py  items_tree.py  jo_test_1.py  jo_test_2.py  jo_test_3.py  jo_test_4.py  jo_test_5.py  jo_test_6.py  jo_test_7.py  key.py  last_task.py  merge.py  (+10 more)
app/: main.py
codewars/: A_Needle_in_the_Haystack.py  Calculate_BMI.py  Fake_Binary.py  Find_the_unique_number.py  Get_the_Middle_Character.py  L1_Set_Alarm.py  ROT13.py  Remove_String_Spaces.py  Snail_Sort.py  The_Feast_of_Many_Beasts.py  The_museum_of_incredible_dull_things.py  Trafic_light.py  Transportation_on_vacation.py  Will_you_make_it.py
computer_health/: computer_health.py
context_manager/: simple_context_manager.py
english_tasks/: adding_s_or_es.py  irregular_verbs  irregular_verbs.py  irregular_verbs_results.txt  result_irregular_verb.txt  results.txt
iterators/: generators.py  sequence_iter.py  (+1 more)
(+77 files in other folders)
