[tool.poetry]
name = "python-tasks-solving-practice"
version = "0.1.0"
description = ""
authors = ["danilalabydindfsdf <labydin2605@mail.ru>"]
readme = "README.md"
packages = [{include = "python_tasks_solving_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
aiometer = "^0.4.0"
black = "^23.7.0"
spacy = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
